[package]
name = "html5ever-arena-dom"
version = "0.1.2"
description = "Parse templates, and tidy them up using html5ever"
authors = ["The html5ever Project Developers", "René Kijewski <rene.SURNAME@fu-berlin.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kijewski/html5ever-arena-dom"
keywords = ["markup", "template", "html"]
categories = ["web-programming"]
edition = "2018"

[dependencies]
html5ever = "0.27"
tendril = "0.4"
typed-arena = "2"
